syntax = "proto3";

package auth;

service AuthenticationService {
  rpc IsSessionValid(SessionRequest) returns (SessionResponse);
}

message SessionRequest {
  string token = 1;
}

message SessionResponse {
  bool valid = 1;
}
